--- a/MoviesDB/app/src/main/res/values/strings.xml
+++ b/MoviesDB/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MovieApp</string>
+    <string name="app_name">MoviesDB</string>
     <string name="action_settings">Settings</string>
     <string name="name_movie">Movie Title</string>
     <string name="movie_details">Movie Details</string>
@@ -12,4 +12,8 @@
     <string name="pref_highest_rated">Highest Rated</string>
     <string name="trailer">Trailer</string>
     <string name="favorite" translatable="false">Favorite Movies</string>
+    <string name="review">Review</string>
+    <string name="pref_sortBy_title">Sort By:</string>
+    <string name="pref_summary">Choose an order to sort.</string>
+    <string name="pref_sortBy_key" translatable="false">sort</string>
 </resources>
